add option to mount external secrets

--- a/charts/genero/templates/cronjob.yml
+++ b/charts/genero/templates/cronjob.yml
@@ -158,6 +158,10 @@ spec:
               - configMapRef:
                   name: {{ include "name" $ }}-{{ .name }}
                   optional: false
+                {{- else if eq (.store | default "") "external" }}
+              - secretRef:
+                  name: {{ .name }}
+                  optional: false
                 {{- else }}
               - secretRef:
                   name: {{ include "name" $ }}-{{ .name }}
