--- a/tests/unusual.values.yml
+++ b/tests/unusual.values.yml
@@ -40,6 +40,9 @@ containers:
     request: 100Mi
     limit: 1Gi
   probe:
+    exec:
+      - 'sleep'
+      - '1'
     path: /health
     port: 5000
   disableRoot: true
