--- a/charts/genero/Chart.yaml
+++ b/charts/genero/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: genero
-version: v1.3.0
-appVersion: v1.3.0
+version: v1.3.0-patch
+appVersion: v1.3.0-patch
 description: Genero, a generic best practice ci/cd helm chart
 home: https://polymatic.systems
 keywords:
